--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -14,6 +14,9 @@
 
 // стили для выпадающего меню choices.js
 // @import "../../node_modules/choices.js/public/assets/styles/base.min";
-@import "../../node_modules/choices.js/public/assets/styles/choices.min";
+@import "../../node_modules/choices.js/public/assets/styles/choices";
 // SCSS test
 // @import "../../node_modules/choices.js/src/styles/choices";
+
+// дефолтные стили для аккордиона
+// @import "../../node_modules/accordion-js/dist/accordion";
