--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,4 @@
 @import "./components/hero";
 @import "./components/podcasts";
 @import "./components/broadcasts";
+@import "./components/guests";
