--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -1,7 +1,9 @@
+@use "sass:math";
+
 @function vw($width, $desktop-width) {
-  @return $width / $desktop-width * 100vw;
+  @return math.div($width, $desktop-width) * 100vw;
 }
 
 @function vh($height, $desktop-height) {
-  @return $height / $desktop-height * 100vh;
+  @return math.div($height, $desktop-height) * 100vh;
 }
