--- a/src/scss/components/_podcasts.scss
+++ b/src/scss/components/_podcasts.scss
@@ -17,12 +17,12 @@
   &__more {
     box-sizing: border-box;
     display: block;
-    width: 246px;
-    height: 70px;
+    padding: 24px 52px;
     margin: 0 auto;
     color: $color-primary;
     font-weight: 500;
     font-size: 20px;
+    line-height: 18px;
     border: 2px solid $color-primary;
     border-radius: 40px;
 
