--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,4 @@
 @import "./components/podcasts";
 @import "./components/broadcasts";
 @import "./components/guests";
+@import "./components/playlists";
