--- a/src/scss/components/_guests.scss
+++ b/src/scss/components/_guests.scss
@@ -18,17 +18,49 @@
     }
 
     &_desc {
+      max-width: 825px;
       margin-bottom: 50px;
       font-weight: 400;
       line-height: 160%;
+
+      @include tablet {
+        max-width: 536px;
+      }
+
+      @include small-tablet {
+        max-width: none;
+      }
     }
   }
 
   &__authors {
-    display: grid;
-    grid-template-columns: vw(730px, $width-desktop-big) 1fr;
-    grid-auto-rows: auto;
-    gap: 30px;
+    // display: grid;
+    // // grid-template-columns: vw(730px, $width-desktop-big) 1fr;
+    // grid-template-columns: 1fr max(350px);
+    // grid-template-rows: 1fr;
+    // gap: 30px;
+    display: flex;
+    justify-content: space-between;
+
+    @include small-tablet {
+      display: block;
+    }
+  }
+
+  &__accordion {
+    margin-right: 30px;
+    flex: 0 1 730px;
+  }
+
+  &__author-desc {
+    flex: 1 0 auto;
+    max-width: 350px;
+    width: vw(255px, $width-tablet);
+
+    @include small-tablet {
+      max-width: none;
+      width: 100%;
+    }
   }
 }
 
@@ -136,6 +168,10 @@
     padding-bottom: 30px;
     column-count: 4;
     border-top: 1px solid $color-text_gray;
+
+    @include tablet {
+      column-count: 3;
+    }
   }
 
   &__name {
@@ -151,6 +187,10 @@
 
   &__img {
     margin-bottom: 12px;
+
+    @include small-tablet {
+      width: 100%;
+    }
   }
 
   &__soc {
